# jig

./: .dockerignore  .dockerignore.prebuilt  .editorconfig  .env.example  .fastconventional.yaml  .gitignore  .gitignore copy  .golangci.yaml  .golangci.yml  .goreleaser.yaml  .sourcery.yaml  .tool-versions  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.goreleaser  GETTING-STARTED.md  IMPLEMENTATION.md  LEARNING.md  LICENSE  Makefile  PLAN.md  PROMPT.md  PROMPTS.md  README.md  REIMPLEMENTATION.md  SECURITY.md  SPEC-UPDATES.md  SPEC.md  SUMMARY.md  TASK.md  TICKETS.md  TODO.md  TOOLS.md  _wait.fish  ai-screenshot-renamer.py  biome.json  config.example.yaml  go.mod  (+13 more)
.claude/: settings.local.json
.cursor/rules/: project.mdc  rust.mdc
.github/: copilot-instructions.md  dependabot.yaml  dependabot.yml  dependabot.yml.bak
.github/disabled-workflows/: build.yml  dependabot-sync.yml  docker-build.yaml  lint-test.yaml  lint.yml  release.yaml  release.yml
.github/workflows/: build.yaml  build.yml  cache-init.yaml  check.yaml  ci.yaml  claude-code-review.yaml  claude-code-review.yml  claude.yaml  claude.yml  codacy.yaml  container.yaml  crate.yaml  devskim.yaml  devskim.yml  lint.yaml  osv-scanner.yml  osv.yaml  publish.yaml  release.yaml  release.yml  test.yaml  trunk.yaml  trunk.yml
.trunk/: trunk.yaml
.trunk/configs/: .codespellrc  .golangci.yaml  .stylelintrc.yml  biome.json
__tests__/: cli-integration.test.ts
cmd/hubbit/: binary.go  clone.go  root.go
docs/: commands.md  plugins.md
internal/binary/: manager.go  manager_test.go  types.go
internal/git/: cloner.go
myriad/envhunter/: envhunter.rb
pkg/parser/: repository.go  repository_test.go
python/: CLAUDE.md  NOTES.md  README.md  pyproject.toml
python/src/: audio_commands.py  cryptor.py
src/: belt_cli.py  cli.go  cli.rs  cli.ts  config.py  config.rs  crypt_commands.py  dns_commands.py  error.rs  index.ts  lib.rs  main.go  main.rs
src/ai/: mod.rs
src/cli/: mod.rs
src/commands/: ai.rs  api.rs  belt.ts  bump.rs  convert.rs  crypto.rs  dance.rs  dependabot.rs  domain.rs  format.rs  generate.rs  generate.ts  git.rs  hello.ts  init.rs  list.ts  mcp.rs  mod.rs  network.rs  new.rs  project.rs  terminal.rs  tls.rs  update.rs  workspace.rs
src/commands/audio/: main.go
src/commands/audio/info/: info.go
src/commands/crypt/: main.go
src/commands/crypt/random/: main.go
src/commands/crypt/random/hex/: hex.go
src/commands/crypt/random/pw/: main.go
src/commands/crypt/simple/: simple.go
src/commands/crypt/simple/decrypt/: decrypt.go  main.go
src/commands/crypt/simple/encrypt/: main.go
src/commands/crypt/simple/key/: main.go
src/commands/crypt/wireguard/: wireguard.go
src/commands/dns/: dns.go
src/commands/dns/flush/: flush.go
src/commands/dns/lookup/: lookup.go
src/commands/dns/sec/: sec.go
src/commands/domain/: domain.go
src/commands/domain/expiry/: main.go
src/commands/domain/ns/: main.go
src/commands/format/: main.go
src/commands/format/json/: main.go
src/commands/hello/: main.go
src/commands/init/: init.go
src/commands/list/: main.go
src/commands/tls/: main.go
src/commands/tls/cert/: main.go
src/commands/tls/cert/req/: main.go
src/commands/tls/cert/selfsign/: main.go
src/commands/tls/ciphers/: ciphers.go
src/config/: config.go  mod.rs
src/dependabot/: mod.rs
src/extensions/: cli-extension.ts
src/git/: mod.rs
src/internal/audio/: audio.go
src/internal/crypto/: crypto.go
src/internal/dns/: dns.go
src/internal/output/: output.go  spinner.go
src/internal/platform/: platform.go
src/internal/types/: types.go
src/internal/version/: version.go
src/lib/: command.ts  output.ts  types.ts  utils.ts
src/package_manager/: github_actions.rs  javascript.rs  mod.rs  python.rs  rust.rs
src/template/: component.rs  language.rs  mod.rs  tests.rs
src/ui/: styles.go
src/util/: constants.rs
src/utils/: config_loader.rs  crypto_utils.rs  logging.rs  mod.rs  output.rs  paths.rs  yaml.rs
templates/go/: .gitignore.tera  README.md.tera  go.mod.tera
templates/go/.github/workflows/: go.yml.tera
templates/go/cmd/app/: main.go.tera
templates/go/internal/app/: app.go.tera
templates/go/pkg/example/: example.go.tera  example_test.go.tera
templates/java/: .gitignore.tera  README.md.tera  pom.xml.tera
templates/java/.github/workflows/: java.yml.tera
templates/java/src/main/java/com/example/: App.java.tera
templates/java/src/test/java/com/example/: AppTest.java.tera
templates/javascript/: .eslintrc.js.tera  .gitignore.tera  README.md.tera  package.json.tera
templates/javascript/.github/workflows/: javascript.yml.tera
templates/javascript/src/: index.js.tera
templates/javascript/tests/: index.test.js.tera
templates/python/: .gitignore.tera  README.md.tera  gitignore  pyproject.toml.tera  workflows
templates/python/.github/workflows/: python.yml.tera
templates/python/src/project_name/: main.py.tera
templates/python/tests/: __init__.py.tera  test_main.py.tera
templates/ruby/: .gitignore.tera  Gemfile.tera  PROJECT_NAME.gemspec.tera  README.md.tera
templates/ruby/.github/workflows/: ruby.yml.tera
templates/ruby/lib/: project_name.rb.tera
templates/ruby/lib/project_name/: version.rb.tera
templates/ruby/spec/: project_name_spec.rb.tera  spec_helper.rb.tera
templates/rust/: .gitignore.tera  Cargo.toml.tera  gitignore  workflows
templates/rust/.github/workflows/: rust.yml.tera
templates/shared/github/workflows/: base.yml.tera  python_jobs.yml.tera  rust_jobs.yml.tera
templates/shared/gitignore/: common.gitignore  python.gitignore
templates/typescript/: .gitignore.tera  package.json.tera  tsconfig.json.tera
templates/typescript/src/: index.ts.tera
templates/typescript/tests/: index.test.ts.tera
tests/: constants.rs  main.rs
