[dependencies]
age = { version = "0.11.1", features = ["armor", "async", "ssh", "plugin"] }
anthropic-ai-sdk = "0.2.26"
anyhow = "1.0.98"
apple-codesign = "0.29.0"
argon2 = { version = "0.5.3", features = ["simple", "std", "zeroize"] }
base64ct = { version = "1.8.0", features = ["std"] }
blake3 = { version = "1.8.2", features = ["rayon", "zeroize"] }
bs58 = { version = "0.5.1", features = ["std", "alloc", "check", "cb58"] }
catppuccin = { version = "2.5.1", features = [
  "ansi-term",
  "css-colors",
  "ratatui",
  "serde",
] }
chbs = "0.1.1"
clap = { version = "4.5.42", features = [
  "derive",
  "cargo",
  "env",
  "unicode",
  "wrap_help",
  "string",
] }
clipboard-rs = "0.3.0"
csv = "1.3.1"
duct = "1.0.0"
env_logger = "0.11.8"
firework-rs = "0.3.1"
gix = { version = "0.73.0", features = [
  "basic",
  "extras",
  "blocking-network-client",
  "blocking-http-transport-reqwest-rust-tls",
  "serde",
] }
icann-rdap-client = "0.0.22"
image = { version = "0.25.6", default-features = false, features = [
  "gif",
  "hdr",
  "ico",
  "jpeg",
  "png",
  "tiff",
  "webp",
  "rayon",
  "color_quant",
  "serde",
] }
image-webp = "0.2.3"
indicatif = { version = "0.18.0", features = [
  "rayon",
  "tokio",
  "improved_unicode",
  "in_memory",
  "futures",
] }
inquire = { version = "0.7.5", features = ["date", "editor"] }
jiff = { version = "0.2.15", features = [
  "serde",
  "logging",
  "tzdb-bundle-always",
  "js",
] }
json = "0.12.4"
jwt-simple = { version = "0.12.12", default-features = false, features = [
  "pure-rust",
  "cwt",
  "wasi-abi2",
] }
log = "0.4.27"
lofty = "0.22.4"
names = { version = "0.14.0", default-features = false }
nucleo-picker = { version = "0.8.1", features = ["serde"] }
# octocrab = { version = "0.44.1", features = ["rustls", "stream"] }
rascii_art = "0.4.5"
ratatui = { version = "0.29.0", features = [
  "crossterm",
  "serde",
  "macros",
  "palette",
  "all-widgets",
  "underline-color",
  "document-features",
  "scrolling-regions",
] }
reqwest = { version = "0.12.22", default-features = false, features = [
  "json",
  "rustls-tls",
  "blocking",
  "cookies",
  "gzip",
  "brotli",
  "deflate",
  "zstd",
  "http2",
  "socks",
  "stream",
  "hickory-dns",
  "multipart",
] }
rmcp = { version = "0.3.2", features = [
  "client",
  "transport-async-rw",
  "transport-child-process",
  "transport-io",
] }
ron = "0.10.1"
rusty-termcolor = "0.1.62"
saphyr = "0.0.6"
serde = { version = "1.0.219", features = ["derive", "std", "alloc", "rc"] }
serde_json = { version = "1.0.142", features = [
  "preserve_order",
  "float_roundtrip",
  "arbitrary_precision",
  "raw_value",
] }
serde_qs = { version = "0.15.0", features = ["indexmap"] }
sha2 = { version = "0.10.9", features = ["oid"] }
spinoff = { version = "0.8.0", features = ["aesthetic", "noise"] }
tachyonfx = { version = "0.16.0", features = ["sendable", "web-time"] }
tera = { version = "1.20.0", features = [
  "default",
  "builtins",
  "chrono",
  "urlencode",
  "humansize",
  "slug",
  "date-locale",
  "preserve_order",
] }
tokio = { version = "1.47.1", features = ["full"] }
toml = { version = "0.9.4", features = ["preserve_order"] }
tui-rain = "1.0.1"
uuid = { version = "1.17.0", features = ["v1"] }
viuer = { version = "0.9.2", features = ["print-file"] }
xattr = "1.5.1"
zxcvbn = { version = "3.1.0", features = ["ser"] }
iroh = { version = "0.91.0", features = [
  "discovery-local-network",
  "discovery-pkarr-dht",
] }
iroh-base = { version = "0.91.0", features = ["key"] }

[dev-dependencies]
assert_cmd = { version = "2.0.17", features = ["color", "color-auto"] }
predicates = "3.1.3"

[package]
name = "jig-cli"
version = "0.0.0-dev"
edition = "2024"
description = "jig - A command line toolbox"
license = "MIT"
repository = "https://github.com/daveio/jig"
authors = ["Dave Williams <dave@dave.io>"]
readme = "README.md"
publish = false
categories = ["command-line-utilities", "cryptography"]
keywords = ["jig", "cli", "command-line", "cryptography", "security"]
include = [
  ".editorconfig",
  ".env.example",
  ".gitignore",
  "AGENTS.md",
  "assets/**",
  "Cargo.lock",
  "Cargo.toml",
  "CHANGELOG.md",
  "CLAUDE.md",
  "CODE_OF_CONDUCT.md",
  "CONTRIBUTING.md",
  "data/**",
  "Dockerfile",
  "LICENSE",
  "mise.toml",
  "README.md",
  "SECURITY.md",
  "src/**",
  "target/**",
  "vendor/**",
]

[[bin]]
name = "jig"
path = "src/main.rs"
