[package]
name = "jig-cli"
version = "0.0.0-dev"
edition = "2024"
description = "jig - A command line toolbox"
readme = "README.md"
repository = "https://github.com/daveio/jig"
license = "MIT"
keywords = ["cli", "command-line", "cryptography", "jig", "security"]
categories = ["command-line-utilities", "cryptography"]
include = [
  ".editorconfig",
  ".env.example",
  ".gitignore",
  "AGENTS.md",
  "CHANGELOG.md",
  "CLAUDE.md",
  "CODE_OF_CONDUCT.md",
  "CONTRIBUTING.md",
  "Cargo.lock",
  "Cargo.toml",
  "Dockerfile",
  "LICENSE",
  "README.md",
  "SECURITY.md",
  "assets/**",
  "data/**",
  "mise.toml",
  "src/**",
  "target/**",
  "vendor/**",
]
publish = false

[package.metadata]
authors = ["Dave Williams <dave@dave.io>"]

[[bin]]
name = "jig"
path = "src/main.rs"

[dependencies]
age = { version = "0.11.2", features = ["armor", "async", "plugin", "ssh"] }
# issues
anthropic-ai-sdk = "0.2.27"
anyhow = "1.0.100"
apple-codesign = "0.29.0"
argon2 = { version = "0.5.3", features = ["simple", "std", "zeroize"] }
base64ct = { version = "1.8.3", features = ["std"] }
blake3 = { version = "1.8.3", features = ["rayon", "zeroize"] }
bs58 = { version = "0.5.1", features = ["alloc", "cb58", "check", "std"] }
# catppuccin = { version = "2.6.0", features = [
#   "ansi-term",
#   "css-colors",
#   "ratatui",
#   "serde",
# ] } # disabled; ratatui conflict for unicode-width
chbs = "0.1.1"
clap = { version = "4.5.55", features = [
  "cargo",
  "derive",
  "env",
  "string",
  "unicode",
  "wrap_help",
] }
clipboard-rs = "0.3.2"
csv = "1.4.0"
duct = "1.1.1"
env_logger = "0.11.8"
firework-rs = "0.3.1"
gix = { version = "0.78.0", features = [
  "basic",
  "blocking-http-transport-reqwest-rust-tls",
  "blocking-network-client",
  "extras",
  "serde",
] }
# icann-rdap-client = "0.0.26" # disabled; mystery build issues
image = { version = "0.25.9", default-features = false, features = [
  "color_quant",
  "gif",
  "hdr",
  "ico",
  "jpeg",
  "png",
  "rayon",
  "serde",
  "tiff",
  "webp",
] }
image-webp = "0.2.4"
indicatif = { version = "0.18.3", features = [
  "futures",
  "improved_unicode",
  "in_memory",
  "rayon",
  "tokio",
] }
inquire = { version = "0.9.2", features = ["date", "editor"] }
# iroh = { version = "0.95.1", features = [
#   "discovery-local-network",
#   "discovery-pkarr-dht",
# ] } # disabled; jwt-simple conflicts
iroh-base = { version = "0.95.1", features = ["key"] }
jiff = { version = "0.2.18", features = [
  "js",
  "logging",
  "serde",
  "tzdb-bundle-always",
] }
json = "0.12.4"
jwt-simple = { version = "0.12.14", default-features = false, features = [
  "cwt",
  "pure-rust",
  "wasi-abi2",
] }
lofty = "0.22.4"
log = "0.4.29"
names = { version = "0.14.0", default-features = false }
nucleo-picker = { version = "0.11.1", features = ["serde"] }
octocrab = { version = "0.49.5", features = ["rustls", "stream"] }
rascii_art = "0.4.5"
ratatui = { version = "0.30.0", features = [
  "all-widgets",
  "crossterm",
  "document-features",
  "macros",
  "palette",
  "scrolling-regions",
  "serde",
  "underline-color",
] }
reqwest = { version = "0.13.1", default-features = false, features = [
  "blocking",
  "brotli",
  "cookies",
  "deflate",
  "gzip",
  "hickory-dns",
  "http2",
  "json",
  "multipart",
  "rustls",
  "socks",
  "stream",
  "zstd",
] }
rmcp = { version = "0.14.0", features = [
  "client",
  "transport-async-rw",
  "transport-child-process",
  "transport-io",
] }
ron = "0.12.0"
rusty-termcolor = "0.1.62"
saphyr = "0.0.6"
serde = { version = "1.0.228", features = ["alloc", "derive", "rc", "std"] }
serde_json = { version = "1.0.149", features = [
  "arbitrary_precision",
  "float_roundtrip",
  "preserve_order",
  "raw_value",
] }
serde_qs = { version = "0.15.0", features = ["indexmap"] }
sha2 = { version = "0.10.9", features = ["oid"] }
spinoff = { version = "0.8.0", features = ["aesthetic", "noise"] }
tachyonfx = { version = "0.23.0", features = ["sendable", "web-time"] }
tera = { version = "1.20.1", features = [
  "default",
  "builtins",
  "chrono",
  "date-locale",
  "humansize",
  "preserve_order",
  "slug",
  "urlencode",
] }
tokio = { version = "1.49.0", features = ["full"] }
toml = { version = "0.9.11+spec-1.1.0", features = ["preserve_order"] }
# tui-rain = "1.0.1" # disabled; ratatui conflict for unicode-width
uuid = { version = "1.20.0", features = ["v1"] }
viuer = { version = "0.11.0", features = ["print-file"] }
xattr = "1.6.1"
zxcvbn = { version = "3.1.0", features = ["ser"] }

[dev-dependencies]
assert_cmd = { version = "2.1.2", features = ["color", "color-auto"] }
predicates = "3.1.3"
